--- a/#src/scss/bio-style.scss
+++ b/#src/scss/bio-style.scss
@@ -1,7 +1,6 @@
 // todo -------------------------- Variables -----------------------------------
 @import 'core/variables';
 @import 'core/variables-icon';
-@import 'core/swiper-vars';
 //todo ---------------------------- Core ---------------------------------------
 @import 'core/mixins';
 @import 'core/extend';
@@ -15,11 +14,6 @@
 @import 'core/fonts';
 //todo  ------------------------ Icon Fonts ------------------------------------
 @import 'core/iconfonts';
-// todo -------------------------- Plugins -------------------------------------
-@import 'assets/swiper';
-// @import 'components/swiper-pagination';
-// @import 'components/swiper-scrollbar';
-// @import 'assets/swiper-bundle';
 // todo -------------------------- Classes -------------------------------------
 // #region
 .wrapper {
@@ -27,12 +21,9 @@
 	flex-direction: column;
 	min-height: 100%;
 	margin: 0 auto;
-	// @extend .gradient;
-	// z-index: -1;
 }
 
 [class*='_container'] {
-	/* border: groove; */
 	max-width: $maxWidthContainer;
 	box-sizing: content-box;
 	margin: 0 auto;
@@ -52,7 +43,6 @@
 [class*='_stretch'] {
 	position: relative;
 	z-index: 0;
-	// min-height: calc(100vh - ($headerHeight + $footerHeight));
 }
 
 // todo --------------------------- Assets -------------------------------------
@@ -62,14 +52,10 @@
 @import 'layouts/header';
 @import 'layouts/footer';
 // todo --------------------------- Pages --------------------------------------
-@import 'pages/page';
+@import 'pages/page-bio';
 // todo --------------------------- Modules ------------------------------------
 // @import 'modules/loading';
 // @import 'modules/breadcrumbs';
 // todo -------------------------- Sections ------------------------------------
-@import 'section/section-mainslide';
-@import 'section/setion-services';
 @import 'section/menu-float';
-@import 'section/aboute';
-// @import 'section/section-swiper';
-// @import 'section/section-modal';
+@import 'section/section-about';
