--- a/#src/scss/bio-style.scss
+++ b/#src/scss/bio-style.scss
@@ -47,6 +47,7 @@
 
 // todo --------------------------- Assets -------------------------------------
 @import 'assets/burger-button';
+@import 'assets/button';
 // todo --------------------------- layout -------------------------------------
 @import 'layouts/bem-block';
 @import 'layouts/header';
