--- a/#src/scss/pages/page-bio.scss
+++ b/#src/scss/pages/page-bio.scss
@@ -54,65 +54,11 @@
 }
 
 .main-content {
-	// .main-content__content
-	&__content {
+	//.main-content__about
+	&__about {
 		position: relative;
-		@extend .gradient-services;
-	}
-
-	// .main-content__slide
-	&__slide {
-		position: relative;
-		z-index: 7;
-		@extend .gradient;
-
-		&::before {
-			left: 0;
-		}
-		&::after {
-			right: 0;
-			@extend .gradient-border-right;
-		}
-		&::before,
-		&::after {
-			content: '';
-			position: absolute;
-			z-index: 10;
-			bottom: 0;
-			width: 100%;
-			height: 1.5px;
-		}
-	}
-
-	// .main-content__services
-	&__services {
-		position: relative;
-		z-index: 6;
-	}
-
-	// .main-content__footer
-	&__footer {
-		position: relative;
-		z-index: 9;
-		@extend .gradient-services;
-	}
-
-	//.main-content__template
-	// &__template {
-	// 	position: relative;
-	// 	z-index: 99;
-	// }
-	// .main-content__equalizer
-	&__equalizer {
-		position: absolute;
-		height: 100%;
+		top: 10rem;
 		width: 100%;
-		top: 100px;
-		bottom: 200px;
-		margin: auto;
-		left: -1;
-		right: -1;
-		display: flex;
-		align-items: center;
+		height: 100px;
 	}
 }
