--- a/#src/scss/pages/page-bio.scss
+++ b/#src/scss/pages/page-bio.scss
@@ -19,7 +19,7 @@
 			opacity: 0;
 			right: 0px;
 			top: 10rem;
-			z-index: 999;
+			z-index: 19;
 			transform: translate3d(300px, 0, 0);
 			padding: 1.5rem 3rem;
 			border: 1px $neon-blue-dark;
@@ -57,8 +57,7 @@
 	//.main-content__about
 	&__about {
 		position: relative;
-		top: 10rem;
 		width: 100%;
-		height: 100px;
+		min-height: calc(100vh - 2px);
 	}
 }
